successfully created the frontend locally

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,4 +1,5 @@
 MONGO_URL="mongodb://127.0.0.1/profileFolio"
+# MONGO_URL="mongodb+srv://vasanth1627:unQQ8LPegI7rQZfZ@cluster0.wi5tr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 OPENAI_API_KEY=paste_key_here(optional)
 GEMINI_API_KEY=paste_key_here
 ALLOWED_ORIGINS=http://localhost:3000
