--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
 	},
 	"keywords": [],
 	"author": "krishnaacharyaa",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"react-hook-form": "^7.52.1",
+		"zod": "^3.23.8"
+	}
 }
